src/test/deca/syntax/invalid/testClassWithoutBraces2.deca
// test class without closing brace
// Result : Error
//
class C {
